# labranet-exam

./: README.md  skaffold.yaml
infra/k8s/: ingress-srv.yaml  labranet-auth-depl.yaml  labranet-auth-mongo-depl.yaml  labranet-reservations-depl.yaml  labranet-reservations-mongo-depl.yaml  labranet-rooms-depl.yaml  labranet-rooms-mongo-depl.yaml  nats-depl.yaml
labranet-auth/: .env  Cargo.toml
labranet-auth/src/: lib.rs  main.rs
labranet-auth/src/db/: db.rs
labranet-auth/src/entities/: users.rs
labranet-auth/src/handlers/: auth.rs  users.rs
labranet-auth/src/models/: login.rs  users.rs
labranet-auth/src/repositories/: users.rs
labranet-auth/src/usecases/: users.rs
labranet-common/: Cargo.toml
labranet-common/src/: events.rs  jwt.rs  lib.rs  response.rs  roles.rs
labranet-reservations/: .env  Cargo.toml  Dockerfile
labranet-reservations/src/: lib.rs  main.rs
labranet-reservations/src/db/: db.rs
labranet-reservations/src/entities/: reservations.rs
labranet-reservations/src/events/: events.rs
labranet-reservations/src/handlers/: reservations.rs
labranet-reservations/src/models/: reservations.rs
labranet-reservations/src/repositories/: reservations.rs
labranet-reservations/src/usecases/: reservations.rs
labranet-rooms/: Cargo.toml
labranet-rooms/src/: lib.rs  main.rs
labranet-rooms/src/db/: db.rs
labranet-rooms/src/entities/: buildings.rs  floors.rs  rooms.rs
labranet-rooms/src/events/: events.rs
labranet-rooms/src/handlers/: rooms.rs
labranet-rooms/src/models/: buildings.rs  floors.rs  rooms.rs
(+5 files in other folders)
