[package]
name = "labranet-common"
version = "0.1.5"
edition = "2021"
description ="labranet common lib"
license = "MIT"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
dotenvy = "0.15.7"
rocket ={version ="0.5.1",features = ["json"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
nats = "0.25.0"
