[package]
name = "labranet-reservations"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38",features = ["serde"]}
config = "0.14.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
mongodb = "3.1.0"
pwhash = "1.0.0"
rocket ={version ="0.5.1",features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
uuid = {version = "1.10.0",features = ["v5"]}
labranet-common = "0.1.3"